/********************************************************************
    created:	2017/12/20 15:29:59
    author:	rush
    email:		
	
    purpose:	
*********************************************************************/
syntax = "proto2";
package DataModel;

enum EWeek
{
    Monday  = 1;         //星期一
    Tuesday = 2;        //星期二
    Wednesday = 4;      //星期三
    Thursday = 8;       //星期四
    Friday = 16;        //星期五
    Saturday = 32;      //星期六
    Sunday = 64;        //星期日

    Workday = 31; //工作日
    DayOff = 96;     //休息日
    Everyday = 127;    //每日
}




enum ELineStyle
{
    Line_None       = 0;            // An invisible line.
    LINE_SOLID      = 1;            // A solid line.
    LINE_DASH       = 2;            // A dash line.
    LINE_DOT        = 3;            // A dot line.
    LINE_DASHDOT    = 4;            // A dash-dot line.
}


message DateTimeDM
{
    required int64 time    = 1;
}
message TimeSpanDM
{
    required int64 time    = 1;
}

enum EProtoDataType
{
    Int32           = 1;           
    Int64           = 2;            
    UInt32          = 3;            
    UInt64          = 4;            
    Single          = 5;            
    Double          = 6;            
    String          = 7;            
    RColor          = 8;        // RColor, 使用int32
    Enum            = 9;        // string指定类型, int32为实际值
    Bool            = 10;       // bool
    DateTime        = 11;       // 日期
    TimeSpan        = 12;       // 时间段
    Numrange        = 13;       // 区间
    Timerange       = 14;       // 时间区间
    User            = 15;       // 用户定义数据类型,string指定类型，user为二进制序列化数据
    FontDm          = 16;       // 字体大小
    Range           = 17;       // Range
	Colorrange		= 18;		// color Range
	File			= 19;		// 一个文件
	Directory		= 20;       // 一个文件夹
    Color           = 21;        // wpf Color
}


enum ERangeOp
{
    REqual           = 1;    // value == left
    RNotEqual        = 2;    // value != left
    RGreater         = 3;    // value > left
    RGreaterEqual    = 4;    // value >= left
    RSmaller         = 5;    // value < left
    RSmallerEqual    = 6;    // value <= left

    RAnd             = 7;    // 并且
    ROr              = 8;    // 或
}


message RangeDM      
{
    required ERangeOp   _operator   = 1;
    optional VarDM      _operand    = 2;
    optional RangeDM    _operand2   = 3;
    optional RangeDM    _other      = 4;
}

enum ECompareOp
{
    Equal           = 1;    // value == left
    NotEqual        = 2;    // value != left
    Greater         = 3;    // value > left
    GreaterEqual    = 4;    // value >= left
    Smaller         = 5;    // value < left
    SmallerEqual    = 6;    // value <= left
    Between         = 7;    // left < value < right 
    BetweenEqual    = 8;    // left <= value <= right
}


message NumRange       // 普适性对象，提供Value{get;set;}, 比较耗性能，除非确实需要否则不用
{
    required ECompareOp op      = 1;
    required double     left    = 2;
    optional double     right   = 3;
}

message FontDM       // 普适性对象，提供Value{get;set;}, 比较耗性能，除非确实需要否则不用
{
    required string     face    = 1;            // 字体名
    optional double     size    = 2;            // 字号
    optional int32      color   = 3;            // 颜色
    optional bool       bold    = 4;            //粗体
    optional bool       italic  = 5;            //斜体
    optional bool       underline = 6;          //下划线
}

enum ETimeRange
{
    Normal          = 1;        // 普通模式，有op和left，right组成
    Span            = 2;        // 最近多少 用left做参数
    ThisYear        = 3;        // 今年
    LastYear        = 4;        // 上年
    ThisMonth       = 5;        // 今月
    LastMonth       = 6;        // 上月
    ThisWeek        = 7;        
    LastWeek        = 8;
    Today           = 9;
    Yestoday        = 10;
    All             = 11;       // 所有
}


message TimeRange       // 普适性对象，提供Value{get;set;}, 比较耗性能，除非确实需要否则不用
{
    required ETimeRange type    = 1;

    optional ECompareOp op      = 2;
    optional int64     leftTick    = 3;
    optional int64     rightTick   = 4;

    optional int64     intradayStartTick    = 5;
    optional int64     intradayEndTick   = 6;
    optional EWeek      weekDay = 7;
}

message ColorRangeItem  //  ColorRange中的一项
{
	required NumRange	range	= 1;
	required int32		color	= 3;
}

message ColorRange
{
	repeated ColorRangeItem ranges	= 1;
}

//message VarDM       // 普适性对象，提供Value{get;set;}, 比较耗性能，除非确实需要否则不用 // 目前主要用于xmlWriter
//{
//    required EProtoDataType  type    = 1;
//    optional int32      int32    = 2;
//    optional int64      int64    = 3;
//    optional uint32     uint32   = 4;
//    optional uint64     uint64   = 5;
//    optional float      single   = 6;
//    optional double     double   = 7;
//    optional string     string   = 8;
//    optional NumRange   _numRange    = 9;
//    optional TimeRange  timerange = 10;
//    optional RangeDM    _range	= 11;
//    optional bytes      user     = 12;		// 用户提供Tostring和string构造函数
//    optional bool      userIsList = 13;	// 用户对象是否作为list存在
//    optional ColorRange   _colorRange    = 14;
//}
message VarDM       // 普适性对象，提供Value{get;set;}, 比较耗性能，除非确实需要否则不用 // 目前主要用于xmlWriter
{
    required string     val   = 1;
    required string     type    = 2;
}

//enum EParaType
//{
//    ParaNone       = 0;            // An invisible line.
//    int      = 1;            // A solid line.
//}
message ParaDM
{
//    required EParaType  type    = 1;
    required string     name    = 1;
    required string     group   = 2;
    optional string     desc    = 3;
    optional VarDM      value   = 4;
    repeated VarDM      presets = 5;

}

message KVDM
{
    required string		key    = 1;
    required VarDM     value   = 2;
	repeated KVDM		nestings = 3;
}






